--- a/src/flavors/mansfield/static/pages/about.html
+++ b/src/flavors/mansfield/static/pages/about.html
@@ -1,10 +1,12 @@
-<h1>About Walk Philly</h1>
+<h1>About Mansfield Tomorrow</h1>
 
-<p>Walkability is a key component to a great city. <a href="http://www.walkscore.com/walkable-neighborhoods.shtml">Research</a> shows that high walkability translates into healthier, wealthier, cleaner, and more connected communities.</p>
+<p>Mansfield Tomorrow is a Town initiative to shape the future of Mansfield through an updated comprehensive plan and improved zoning. Mansfield Tomorrow will help us preserve what’s best about Mansfield, face the challenges of tomorrow, and move community priorities forward.</p>
 
-<p>Philadelphia is already considered one of the <a href="http://www.walkscore.com/PA/Philadelphia">most walkable cities in the country</a>, but our great pedestrian access is spotty and not available to all citizens.</p>
+<p>At the end of this process, we will have a unified plan that identifies where new development should occur; what that development should look like; how we’ll promote local businesses and support farms; how we’ll seek to make living in Mansfield more affordable; and how we’ll preserve the essential characteristics of our town.</p> 
 
-<p>This map gives Philadelphians a way of recording and sharing pedestrian obstacles like broken or missing <a href="http://streetswiki.wikispaces.com/Sidewalks">sidewalks</a>, lack of <a href="http://streetswiki.wikispaces.com/Pedestrian+Signal">crossing signals</a>, or an overabundance of <a href="http://streetswiki.wikispaces.com/Parking%2C+Off+Street">off street parking</a> in our communities. By making this information publicly available, we can illustrate areas of greatest need and build support for improvements.</p>
+<p>We’d like your input on specific areas within Mansfield you’d like to preserve, areas you’d like to change, and why.</p>
 
-<p>Walk Philly is a demo of Shareabouts, a project from <a
-  href="http://openplans.org">OpenPlans</a>.</p>
+<p>Visit the <a href="http://www.mansfieldtomorrow.com" target="_blank" title="Mansfield Tomorrow website">Mansfield Tomorrow website</a> to learn more about this important initiative.</p>
+
+<p>Close this window to get started!</p>
+
