remove old about page, update new one in jstemplates

--- a/src/flavors/mansfield/jstemplates/pages/about.html
+++ b/src/flavors/mansfield/jstemplates/pages/about.html
@@ -1,8 +1,10 @@
 <h1>About Mansfield Tomorrow</h1>
 
-<p>Mansfield Tomorrow is a Town initiative to shape the future of Mansfield through an updated comprehensive plan and improved zoning. Mansfield Tomorrow will help us preserve what's best about Mansfield, face the challenges of tomorrow, and move community priorities forward.</p>
+<p>Mansfield Tomorrow is a Town initiative to shape the future of Mansfield through an updated comprehensive plan and improved zoning. Mansfield Tomorrow will help 
+us preserve what's best about Mansfield, face the challenges of tomorrow, and move community priorities forward.</p>
 
-<p>At the end of this process, we will have a unified plan that identifies where new development should occur; what that development should look like; how we'll promote local businesses and support farms; how we'll seek to make living in Mansfield more affordable; and how we'll preserve the essential characteristics of our town.</p> 
+<p>At the end of this process, we will have a unified plan that identifies how we will preserve the essential characteristics of our town, where new development 
+should occur and what it should look like, how we will promote local businesses and support farms and how we will seek to make living in Mansfield more affordable.</p>
 
 <p>We'd like your input on specific areas within Mansfield you'd like to preserve, areas you'd like to change, and why.</p>
 
