testing updated about page after dotcloud deployment

--- a/src/flavors/mansfield/static/pages/about.html
+++ b/src/flavors/mansfield/static/pages/about.html
@@ -1,4 +1,4 @@
-<h1>About Mansfield Tomorrow</h1>
+<h1>About Walkshops</h1>
 
 <p>Mansfield Tomorrow is a Town initiative to shape the future of Mansfield through an updated comprehensive plan and improved zoning. Mansfield Tomorrow will help us preserve what’s best about Mansfield, face the challenges of tomorrow, and move community priorities forward.</p>
 
