--- a/src/flavors/mansfield/jstemplates/pages/about.html
+++ b/src/flavors/mansfield/jstemplates/pages/about.html
@@ -2,6 +2,6 @@
 
 <p>Welcome! This site is to help you identify places to preserve (green dots), places to change (red dots), or general comments (brown dots).</p>
 
-<p>At the end of this process, we will have a map that helps us better understand the area as it is today and how we'd like it to look in the future.</p>)
+<p>At the end of this process, we will have a map that helps us better understand the area as it is today and how we'd like it to look in the future.</p>
 
 <p>Close this window to get started!</p>
