updates to east line forum map

--- a/src/flavors/eastcorridor/jstemplates/pages/about.html
+++ b/src/flavors/eastcorridor/jstemplates/pages/about.html
@@ -1,7 +1,11 @@
-<h1>About Walkshops</h1>
+<h1>Instructions</h1>
 
-<p>Welcome! This site is to help you identify places to preserve (green dots), places to change (red dots), or general comments (brown dots).</p>
+<p>Welcome! This site is to help you identify: 
+<br>
+<br><img src="/static/css/images/feature-point-green.png"> Treasured Places 
+<br><img src="/static/css/images/feature-point-red.png"> Concerns (red dots)
+<br><img src="/static/css/images/feature-point-yellow.png"> General Comments (brown dots).
+</p>
 
-<p>At the end of this process, we will have a map that helps us better understand the area as it is today and how we'd like it to look in the future.</p>
+<p>At the end of this process, we will have a map that helps us better understand the area as it is today and how we'd like it to look in the future. Close this window to get started!</p>
 
-<p>Close this window to get started!</p>
