--- a/src/flavors/eastcorridor/static/pages/about.html
+++ b/src/flavors/eastcorridor/static/pages/about.html
@@ -1,6 +1,6 @@
-<h1>About Walkshops</h1>
+<h1>Instructions</h1>
 
-<p>Welcome! This site is to help you identify places to preserve (green dots), places to change (red dots), or general comments (brown dots).</p>
+<p>Welcome! This site is to help you identify Treasured Places (green dots), Concerns (red dots), or General Comments (brown dots).</p>
 
 <p>At the end of this process, we will have a map that helps us better understand the area as it is today and how we'd like it to look in the future.</p>)
 
