--- a/src/flavors/eastcorridor/jstemplates/pages/about.html
+++ b/src/flavors/eastcorridor/jstemplates/pages/about.html
@@ -1,14 +1,13 @@
 <h1>Instructions</h1>
 
 <p>Welcome! This site is to help you identify: 
-<br>
 <br><img src="/static/css/images/feature-point-green.png"> Treasured Places 
-<br><img src="/static/css/images/feature-point-red.png"> Concerns (red dots)
-<br><img src="/static/css/images/feature-point-yellow.png"> General Comments (brown dots).
+<br><img src="/static/css/images/feature-point-red.png"> Concerns 
+<br><img src="/static/css/images/feature-point-yellow.png"> General Comments 
 </p>
 
 <p>Stations are shown with a half mile buffer like this: 
-<br><img src="/static/css/halfmile.png" height="36" width="44">  
-<br>which is approximately a 10 mile walk. </p>
+<br><img src="/static/css/Halfmile.png" height="36" width="44">  
+<br>which is approximately a 10 minute walk. </p>
 <p>At the end of this process, we will have a map that helps us better understand the area as it is today and how we'd like it to look in the future. Close this window to get started!</p>
 
