updated pins, survey, and place detail

--- a/src/sa_web/jstemplates/place-detail-survey.html
+++ b/src/sa_web/jstemplates/place-detail-survey.html
@@ -1,10 +1,10 @@
           {{#survey_config.show_responses}}
-          <h4 class="survey-header">
+          <!-- <h4 class="survey-header">
             {{ responses.length }}
             {{# has_single_response }}{{ survey_config.response_name }}{{/ has_single_response }}
             {{^ has_single_response }}{{ survey_config.response_plural_name }}{{/ has_single_response }}
-          </h4>
-
+          </h4> -->
+          <br><br>
           <a href="#reply" class="reply-link btn btn-small">{{ survey_config.form_link_text }}</a>
 
           <ol class="responses unstyled-list">
