tweaked legend, custom css

--- a/src/flavors/walkdenver/jstemplates/pages/overview.html
+++ b/src/flavors/walkdenver/jstemplates/pages/overview.html
@@ -1,4 +1,4 @@
-<p>Welcome to {{ config.app.name }}, a tool for recording the walk-friendliness in Denver! <a href = "features.html">Learn more</a> about the project. </p>
+<p>Welcome to {{ config.app.name }}, a tool for recording the walk-friendliness of Denver! <a href ="/page/why">Learn more</a> about the project. </p>
 
 <h4>Instructions</h3> 
 
