--- a/src/flavors/walkdenver/jstemplates/pages/overview.html
+++ b/src/flavors/walkdenver/jstemplates/pages/overview.html
@@ -2,15 +2,15 @@
 
 <h4>Instructions</h3> 
 
-<p>1. Move the map to the area you'd like to tell us about or use the crosshairs to automatically zoom to your current location. </p>
-<p>2. Click on "Add a Place".</p>
-<p>3. Drag the map until the pin is located where you want it.</p>
-<p>4. Choose whether you want to:<br>
+<p><span class="numbers">1.</span> Read the <a href="/page/tips">tips</a> before getting started for help answering questions.</p>
+<p><span class="numbers">2.</span> Move the map to the area you'd like to tell us about or use the crosshairs to automatically zoom to your current location. </p>
+<p><span class="numbers">3.</span> Click on "Add a Place".</p>
+<p><span class="numbers">4.</span> Drag the map until the pin is located where you want it.</p>
+<p><span class="numbers">5.</span> Choose whether you want to:<br>
 	<ul><li>record the number of pedestrians</li>
 	<li>record the street quality for walking</li>
 	<li>record the intersections quality for walking</li></ul>
 </p>
-<p>5. Answer the questions. Click on <a href="rating.html">Rating Tips</a> in the menu for help deciding how to answer them.</p>
-<p>6. Share with your friends by logging into twitter or facebook (top right of the menu).</p>
-
+<p><span class="numbers">6.</span> Answer the questions. All questions are optional, but we hope you'll answer all of them!
+<p><span class="numbers">7.</span> Once you click submit, you should see your entry on the map. Congratulations! 
 <p class="btn btn-block btn-large close-btn">Got it. Let's Get started!</p>
