--- a/src/flavors/walkdenver/jstemplates/pages/tips.html
+++ b/src/flavors/walkdenver/jstemplates/pages/tips.html
@@ -1,6 +1,28 @@
 <h1>Tips</h1>
 
-<p>Insert Tips</p>
-
-
-<a href="#" id="add-place" class="btn btn-small "><span>Return to Add a Place</span></a>
+<p>Not sure how to answer? Take a look at the tips below!</p>
+<h5 class="tips">General Tips</h5>
+<p class="tips">Deleting Points</p>
+<span class="tips">If you make a mistake and need to delete a point, just send us an email at: help@walkscope.org</span>
+<p class="tips">Geolocation</p>
+<span class="tips">The locate me button <img src="/static/css/images/locate-me.png" height="25px"> allows you to automatically zoom to your current location. Make sure geolocation is enabled for your device AND for your browser. </span>
+<br>
+<h5 class="tips">Pedestrian Count</h5>
+<p class="tips">Is it raining or snowing?</p>
+<span class="tips">If there's significant snow or ice on the ground, go ahead and choose snowing.</span>
+<h5 class="tips">Sidewalk Quality</h5>
+<p class="tips">What type of sidewalk?</p>
+<span class="tips">Use your best guess for sidewalk width. Also, see the diagram below:</span>
+<br><img src="/static/css/images/sections-02.png">
+<p class="tips">Are there obstructions in the sidewalk?</p>
+<span class="tips">Anything that would prevent pedestrians from easily using the sidewalk is an obstruction. Examples might include trash or debris, overgrown plants, or utility poles. While you're at it, go ahead and tell us what the obstruction is in the Description!
+</span>
+<p class="tips">Is the sidewalk significantly cracked or uneven?</p>
+<span class="tips">A crack or uneven sidewalk is significant if it makes it unsafe or difficult for pedestrians. Ignore minor cracks or other abnormalities that don't affect sidewalk usage.</span>
+<p class="tips">Do you feel unsafe? (lighting, traffic, or other)</p>
+<span class="tips">Safety is important, but often hard to quantify. Sometimes low lighting or fast-moving traffic can trigger of safety concerns, while other times the presence of lots of people or appropriate protection from traffic can offset those concerns. Use your best judgement and tell us more in the Description!   </span>
+<h5 class="tips">Intersection Quality</h5>
+<p class="tips">How many lanes are there to cross?</p>
+<span class="tips"> Count the number of lanes on the street with the <strong>most</strong> lanes. For instance, if one street had 4 lanes and the other had 7, the number of lanes recorded would be 7. You should also count turn lanes as lanes.</span>
+<p class="tips">Are there median islands or bulb-outs?</p>
+<br><img src="/static/css/images/sections-03.png">
