--- a/src/flavors/walkdenver/jstemplates/pages/why.html
+++ b/src/flavors/walkdenver/jstemplates/pages/why.html
@@ -1,3 +1,12 @@
 <h1>What is this project about?</h1>
 
-<p>Insert Project Text</p>
+<p class="why">At WalkDenver we believe that “people are pedestrians by design.” Yet street design is often focused solely on cars, resulting in streets that are unsafe and unpleasant for people on foot. </p>
+	
+<p class="why">WALKscope allows Denver residents and visitors to collect data related to sidewalks, intersections, and pedestrian counts. This information will help create an inventory of pedestrian infrastructure in Denver, identify gaps, and build the case for improvements.
+WalkDenver and PlaceMatters collaborated to develop WALKscope with grant funding from <a href="http://www.milehighconnects.org">Mile High Connects</a>.</p>
+
+<p class="why">Learn more about us at:</p>
+<div class="imglogos">
+<a href="http://www.walkdenver.org"><img class="logos" src="/static/css/images/WalkDenverLogo.png"></a>
+<a href="http://www.placematters.org"><img class="logos" src="/static/css/images/PlaceMattersLogo.png"></a>
+</div>
