added sidewalk category, sign-in nav, etc

--- a/src/flavors/walkdenver/jstemplates/pages/tips.html
+++ b/src/flavors/walkdenver/jstemplates/pages/tips.html
@@ -12,7 +12,7 @@
 <span class="tips">If there's significant snow or ice on the ground, go ahead and choose snowing.</span>
 <h5 class="tips">Sidewalk Quality</h5>
 <p class="tips">What type of sidewalk?</p>
-<span class="tips">Use your best guess for sidewalk width. Also, see the diagram below:</span>
+<span class="tips">Use your best guess for sidewalk width. Detached sidewalks had a strip of grass or other space between the sidewalk and the road, like this:</span>
 <br><img src="/static/css/images/sections-02.png">
 <p class="tips">Are there obstructions in the sidewalk?</p>
 <span class="tips">Anything that would prevent pedestrians from easily using the sidewalk is an obstruction. Examples might include trash or debris, overgrown plants, or utility poles. While you're at it, go ahead and tell us what the obstruction is in the Description!
