set logo links to new tab

--- a/src/flavors/walkdenver/jstemplates/pages/why.html
+++ b/src/flavors/walkdenver/jstemplates/pages/why.html
@@ -7,6 +7,6 @@ WalkDenver and PlaceMatters collaborated to develop WALKscope with grant funding
 
 <p class="why">Learn more about us at:</p>
 <div class="imglogos">
-<a href="http://www.walkdenver.org"><img class="logos" src="/static/css/images/WalkDenverLogo.png"></a>
-<a href="http://www.placematters.org"><img class="logos" src="/static/css/images/PlaceMattersLogo.png"></a>
+<a href="http://www.walkdenver.org" target="_blank"><img class="logos" src="/static/css/images/WalkDenverLogo.png"></a>
+<a href="http://www.placematters.org" target="_blank"><img class="logos" src="/static/css/images/PlaceMattersLogo.png"></a>
 </div>
