--- a/src/sa_web/jstemplates/place-form.html
+++ b/src/sa_web/jstemplates/place-form.html
@@ -34,7 +34,7 @@
                   {{^}}
                     <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} style="width:140px;">
                     <br>
-                    <span class="or-sign-in">or sign in with <!-- <a class="#" --><a href="/users/login/twitter/">Twitter</a> or <!-- <a class="auth-inline facebook-btn" --><a href="/users/login/facebook/">Facebook</a></span>
+                    <!-- <span class="or-sign-in">or sign in with <!-- <a class="#" --><!-- <a href="/users/login/twitter/">Twitter</a> or --> <!-- <a class="auth-inline facebook-btn" --><!-- <a href="/users/login/facebook/">Facebook</a></span> -->
 
                   {{/is_authenticated}}
                 {{^}}
