--- a/src/flavors/walkdenver/jstemplates/pages/donate.html
+++ b/src/flavors/walkdenver/jstemplates/pages/donate.html
@@ -1,4 +1,4 @@
-<p>WALKscope was made possible through a grant from MileHighConnects. Help us continue to improve WALKscope and make it available!
+<p>WALKscope was made possible through a grant from MileHighConnects. Help us continue to improve WALKscope and support WalkDenver!
 </p>
 <br> 
 <div id="donate">   
