--- a/src/flavors/walkdenver/jstemplates/pages/donate.html
+++ b/src/flavors/walkdenver/jstemplates/pages/donate.html
@@ -2,7 +2,7 @@
 </p>
 <br> 
 <div id="donate">   
-		 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+		 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
 		<input type="hidden" name="cmd" value="_s-xclick">
 		<input type="hidden" name="hosted_button_id" value="LBD2PAP3BSQ82">
 		<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
